exercise-2/global/manifests/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-app-service
spec:
  type: NodePort
  selector:
    app: log-output-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30008
